# kc-touch

./: .gitignore  .gitmodules  CMakeLists.txt  CurrentTask.md  HANDOFF.md  README.md  TODO.md  dependencies.lock.old  hookshot-check-20260228203054.txt  hookshot-test-20260228201046.txt  idf_run.py  partitions.csv  refactor_qr_task.py  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.github/workflows/: ci.yml
components/esp_hosted/: CMakeLists.txt
components/esp_wifi_remote/: Kconfig
components/kc_touch_display/: CMakeLists.txt  Kconfig  idf_component.yml
components/kc_touch_display/include/: kc_touch_display.h
components/kc_touch_display/src/: kc_touch_display.c  kc_touch_display_backend.h  kc_touch_display_tab5.cpp  kc_touch_display_tab5.h  kc_touch_display_waveshare_p4.c
components/kc_touch_gui/: CMakeLists.txt  Kconfig  idf_component.yml
components/kc_touch_gui/include/: kc_touch_gui.h
components/kc_touch_gui/src/: app_video.c  app_video.h  kc_touch_gui.c
components/kc_touch_gui/src/screens/: page_dashboard.c  page_sensors.c  page_settings.c  page_wifi.c  ui_root.c  ui_root.h  ui_theme.c  ui_theme.h
components/kc_touch_provisioning/: CMakeLists.txt
components/kc_touch_provisioning/include/: kc_touch_provisioning.h
components/kc_touch_provisioning/src/: kc_touch_provisioning.c
components/lvgl_yaml_gui/: CMakeLists.txt  Kconfig
components/lvgl_yaml_gui/include/: lvgl_yaml_gui.h  yui_fonts.h  yui_navigation_queue.h
components/lvgl_yaml_gui/src/: lvgl_yaml_gui.c  yui_fonts.c  yui_navigation_queue.c
components/lvgl_yaml_gui/src/fonts/: yui_font_14.c  yui_font_20.c  yui_font_32.c
components/quirc/: CMakeLists.txt
components/sensor_manager/: CMakeLists.txt  Kconfig
components/sensor_manager/include/: sensor_manager.h
components/sensor_manager/src/: sensor_manager.c  sensor_manager.cpp
components/ui_schemas/: CMakeLists.txt
components/ui_schemas/examples/: showcase.yml
components/ui_schemas/include/: ui_schemas.h
components/ui_schemas/schemas/: home.yml
components/ui_schemas/src/: ui_schemas.c
components/wifi_copro_hw/: CMakeLists.txt
components/wifi_copro_power/: CMakeLists.txt
components/wifi_copro_transport/: CMakeLists.txt
components/wifi_provisioning/: CMakeLists.txt  Kconfig  config_overrides.h
components/yaml_core/: CMakeLists.txt
components/yaml_ui/: CMakeLists.txt
components/yamui_loader/: CMakeLists.txt  Kconfig  idf_component.yml
components/yamui_loader/include/: yamui_loader.h
components/yamui_loader/src/: yamui_loader.c  yamui_loader_fs.c  yamui_loader_fs.h  yamui_loader_httpd.c  yamui_loader_https.c  yamui_loader_uart.c
components/yui_camera/: CMakeLists.txt  Kconfig  idf_component.yml
docs/: SOFTAP_PROVISIONING_GUIDE.md  linux_vps_migration.md  provisioning_security.md
docs/YamUI/: 00-yaml-overview.md  01-yaml-core.md  02-ui-schema.md  03-lvgl-builder.md  04-sensor-manager.md  05-runtime-flow.md  06-file-locations.md  07-project-structure.md  08-example-yaml.md  09-example-code.md  10-style-registry.md  11-widget-types.md  12-sensor-registry.md  13-testing-guide.md  14-component-system.md  15-state-system.md  16-event-system.md  17-navigation-system.md  18-widget-vocabulary.md  19-expression-engine.md  20-style-system.md  21-layout-system.md  22-screen-system.md  23-action-system.md  24-modal-system.md  25-native-integration.md  26-yaml-schema.md  27-runtime-architecture.md  28-file-and-project-structure.md  29-build-and-deployment-pipeline.md  30-error-handling-and-diagnostics.md  31-performance-model.md  32-testing-and-validation.md  33-logging-and-telemetry.md  34-developer-tooling-and-cli.md  35-asset-pipeline.md  36-font-system.md  37-internationalization.md  38-accessibility-model.md  39-future-extensions-roadmap.md  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  kc_touch_camera.cpp  kc_touch_camera.h  tab5_wifi_power.c  tab5_wifi_power.h  wifi_copro_hw.h  wifi_copro_power.c  wifi_copro_power.h
tests/test_navigation_stack/: CMakeLists.txt  sdkconfig.defaults
tests/test_sensor_manager/: CMakeLists.txt  sdkconfig.defaults
tools/: linux_vps_build.sh  yamui_bundle.py
tools/yam-ui-generator/: README.md  deploy-generated-schema.ps1  pyproject.toml  start-dev.ps1  stop-dev.ps1  use-generated-schema.ps1
tools/yam-ui-generator/backend/: README.md  pyproject.toml
tools/yam-ui-generator/backend/tests/: test_assets.py  test_health.py  test_projects.py
tools/yam-ui-generator/backend/yam_ui_generator/: __init__.py  api.py  asset_service.py  migration.py  models.py  palette.py  project_service.py  schema.py  template_project.py  yaml_io.py
tools/yam-ui-generator/docs/: api-contract.md  contributor-guide.md  finish-checklist.md  performance-baseline.md  phase1-core-features.md  phase1-phase2-implementation-plan.md  phase2-core-features.md  release-checklist.md  release-notes-template.md  release-notes-v0.1.0.md  release-qa-evidence.md  troubleshooting.md  user-guide.md
tools/yam-ui-generator/frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tools/yam-ui-generator/frontend/src/: App.tsx  main.tsx
tools/yam-ui-generator/frontend/src/components/: AssetManager.tsx  AssetUploadQueue.tsx  Canvas.tsx  ComponentManager.tsx  DeviceConnection.tsx  IssueAccelerators.test.tsx  IssueAccelerators.tsx  Modal.tsx  ProjectSettings.test.tsx  ProjectSettings.tsx  ProjectToolbar.test.tsx  ProjectToolbar.tsx  PropertyInspector.tsx  ScreenManager.tsx  StyleManager.test.tsx  StyleManager.tsx  StylePreviewCard.tsx  TranslationManager.test.tsx  TranslationManager.tsx  WidgetPalette.tsx  YamlPanel.test.tsx  YamlPanel.tsx
tools/yam-ui-generator/frontend/src/context/: ProjectContext.test.tsx  ProjectContext.tsx
tools/yam-ui-generator/frontend/src/hooks/: useAssetUploads.ts
tools/yam-ui-generator/frontend/src/styles/: app.css
tools/yam-ui-generator/frontend/src/types/: yamui.ts
tools/yam-ui-generator/frontend/src/utils/: api.ts  deviceHttp.ts  deviceSerial.ts  telemetry.ts  translation.ts  widgetTemplates.ts
(+31 files in other folders)
