[project]
name = "yamui-gen"
version = "0.1.0"
description = "YamUI YAML file generator using a drag-and-drop UI"
authors = [
    {name = "d0773d",email = "dottedquad@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "jsonschema (>=4.26.0,<5.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
